--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perf-test",
+  "name": "@smikhalevski/perf-test",
   "version": "1.0.0",
   "description": "The Node.js performance testing tool.",
   "main": "./lib/index-cjs.js",
