--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "preset": "ts-jest"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@types/jest": "^26.0.23",
-    "jest": "^27.0.2",
-    "rollup": "^2.50.5",
-    "ts-jest": "^27.0.2",
-    "typedoc": "^0.21.4",
-    "typescript": "4.2.4"
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/jest": "^27.4.0",
+    "jest": "^27.5.1",
+    "rollup": "^2.67.2",
+    "ts-jest": "^27.1.3",
+    "typedoc": "^0.22.11",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "parallel-universe": "^1.1.1"
   }
 }
