--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   ],
   "scripts": {
     "build": "tsc && npm run rollup && npm run rollup-bin",
-    "rollup": "rollup --external kleur,parallel-universe --input ./lib/index.js --file ./lib/index-cjs.js --format cjs --plugin @rollup/plugin-node-resolve",
-    "rollup-bin": "rollup --no-treeshake --external kleur,parallel-universe --input ./lib/bin.js --file ./lib/bin.js --format cjs --plugin @rollup/plugin-node-resolve",
-    "clean": "rm -rf ./lib",
+    "rollup": "rollup --input ./lib/index.js --file ./lib/index-cjs.js --format cjs --plugin @rollup/plugin-node-resolve",
+    "rollup-bin": "rollup --input ./lib/bin/index.js --file ./lib/bin.js --format cjs --plugin @rollup/plugin-node-resolve && rimraf ./lib/bin",
+    "clean": "rimraf ./lib",
     "test": "jest --detectOpenHandles",
     "docs": "typedoc ./src/main/index.ts",
     "publish-docs": "[ -d ./docs ] && [[ ! $(git status --porcelain) ]] && branch=$(git rev-parse --abbrev-ref HEAD) && sha=$(git rev-parse --short HEAD) && t=$(mktemp -d) && cp -R ./docs/ $t && git checkout ghpages && ls -A | grep -wv .git | xargs rm -rf && cp -R $t/ . && git add . && git commit -m \"Updated docs ($sha)\" && git push && git checkout $branch",
@@ -44,13 +44,11 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/jest": "^27.4.0",
     "jest": "^27.5.1",
+    "kleur": "^4.1.4",
+    "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
     "ts-jest": "^27.1.3",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "kleur": "^4.1.4",
-    "parallel-universe": "^1.1.1"
   }
 }
