--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@smikhalevski/perf-test",
+  "name": "toofast",
   "version": "1.0.0",
-  "description": "The Node.js performance testing tool.",
+  "description": "The Node.js performance testing tool with unit-test-like API.",
   "main": "./lib/index-cjs.js",
   "module": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/smikhalevski/perf-test.git"
+    "url": "git+https://github.com/smikhalevski/toofast.git"
   },
   "keywords": [
     "performance",
@@ -34,9 +34,9 @@
   "author": "Savva Mikhalevski <smikhalevski@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/smikhalevski/perf-test/issues"
+    "url": "https://github.com/smikhalevski/toofast/issues"
   },
-  "homepage": "https://github.com/smikhalevski/perf-test#readme",
+  "homepage": "https://github.com/smikhalevski/toofast#readme",
   "jest": {
     "preset": "ts-jest"
   },
