--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^29.4.0",
     "jest": "^29.4.3",
     "kleur": "^4.1.5",
+    "prettier": "^2.8.4",
     "rimraf": "^4.1.3",
     "rollup": "^3.18.0",
     "rollup-plugin-dts": "^5.2.0",
