--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
   },
   "homepage": "https://github.com/smikhalevski/toofast#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/glob": "^8.1.0",
+    "@types/glob-to-regexp": "^0.4.1",
     "@types/jest": "^29.4.0",
+    "glob-to-regexp": "^0.4.1",
     "jest": "^29.4.3",
     "kleur": "^4.1.5",
     "prettier": "^2.8.4",
