--- a/package.json
+++ b/package.json
@@ -2,25 +2,29 @@
   "name": "toofast",
   "version": "1.3.1",
   "description": "The Node.js performance testing tool with unit-test-like API.",
-  "main": "./lib/index-cjs.js",
-  "module": "./lib/index.js",
+  "main": "./lib/index.js",
+  "module": "./lib/index.mjs",
   "types": "./lib/index.d.ts",
   "bin": {
     "toofast": "./lib/bin.js"
+  },
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "import": "./lib/index.mjs",
+      "require": "./lib/index.js"
+    },
+    "./package.json": "./package.json"
   },
   "sideEffects": false,
   "files": [
     "lib"
   ],
   "scripts": {
-    "build": "tsc && npm run rollup && npm run rollup-bin",
-    "rollup": "rollup --input ./lib/index.js --file ./lib/index-cjs.js --format cjs --plugin @rollup/plugin-node-resolve",
-    "rollup-bin": "rollup --external glob --banner '#!/usr/bin/env node' --input ./lib/bin/index.js --file ./lib/bin.js --format cjs --plugin @rollup/plugin-node-resolve && rimraf ./lib/bin && chmod +x ./lib/bin.js",
-    "clean": "rimraf ./lib",
-    "test": "jest --detectOpenHandles",
-    "docs": "typedoc ./src/main/index.ts",
-    "publish-docs": "[ -d ./docs ] && [[ ! $(git status --porcelain) ]] && branch=$(git rev-parse --abbrev-ref HEAD) && sha=$(git rev-parse --short HEAD) && t=$(mktemp -d) && cp -R ./docs/ $t && git checkout ghpages && ls -A | grep -wv .git | xargs rm -rf && cp -R $t/ . && git add . && git commit -m \"Updated docs ($sha)\" && git push && git checkout $branch",
-    "release-docs": "npm run clean && npm run docs && npm run publish-docs"
+    "build": "rollup --config --configPlugin typescript",
+    "clean": "rimraf ./lib ./docs ./coverage",
+    "test": "jest",
+    "docs": "typedoc ./src/main/index.ts"
   },
   "repository": {
     "type": "git",
@@ -37,22 +41,26 @@
     "url": "https://github.com/smikhalevski/toofast/issues"
   },
   "homepage": "https://github.com/smikhalevski/toofast#readme",
-  "jest": {
-    "preset": "ts-jest"
-  },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/glob": "^7.2.0",
-    "@types/jest": "^27.4.0",
-    "jest": "^27.5.1",
-    "kleur": "^4.1.4",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.67.2",
-    "ts-jest": "^27.1.3",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5"
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/glob": "^8.1.0",
+    "@types/glob-to-regexp": "^0.4.1",
+    "@types/jest": "^29.4.0",
+    "glob-to-regexp": "^0.4.1",
+    "jest": "^29.4.3",
+    "kleur": "^4.1.5",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.1.3",
+    "rollup": "^3.18.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "ts-jest": "^29.0.5",
+    "tslib": "^2.5.0",
+    "typedoc": "^0.23.26",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "glob": "^8.0.1"
+    "glob": "^9.1.2"
   }
 }
