--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
+  "type": "module",
   "bin": {
     "toofast": "./toofast.js"
   },
@@ -18,10 +19,10 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsc --project tsconfig.build.json && rollup --config && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete scripts devDependencies",
-    "clean": "rimraf gen lib docs coverage",
-    "test": "jest",
-    "docs": "typedoc src/main/index.ts"
+    "build": "tsc --project tsconfig.build.json && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete scripts devDependencies",
+    "clean": "rimraf lib docs coverage",
+    "test": "vitest run",
+    "docs": "typedoc"
   },
   "repository": {
     "type": "git",
@@ -39,26 +40,20 @@
   },
   "homepage": "https://github.com/smikhalevski/toofast#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@types/glob-to-regexp": "^0.4.1",
-    "@types/jest": "^29.5.4",
+    "@types/glob-to-regexp": "^0.4.4",
+    "@types/node": "^22.15.14",
     "glob-to-regexp": "^0.4.1",
-    "jest": "^29.6.4",
     "kleur": "^4.1.5",
-    "prettier": "^3.0.2",
-    "rimraf": "^5.0.1",
-    "rollup": "^3.28.1",
-    "rollup-plugin-dts": "^5.3.1",
-    "ts-jest": "^29.1.1",
-    "tslib": "^2.6.2",
-    "typedoc": "^0.24.8",
-    "typedoc-custom-css": "github:smikhalevski/typedoc-custom-css#master",
-    "typescript": "^5.1.6"
+    "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
+    "tslib": "^2.8.1",
+    "typedoc": "^0.28.4",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "dependencies": {
     "argcat": "^1.0.2",
-    "doubter": "^3.0.1",
-    "fast-glob": "^3.3.1"
+    "doubter": "^5.1.1",
+    "fast-glob": "^3.3.3"
   }
 }
