--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "importHelpers": true,
-    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "noUnusedLocals": true,
+    "isolatedModules": true,
     "strict": true,
-    "target": "ES5",
-    "module": "ES6",
-    "outDir": "./gen"
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "skipLibCheck": true,
+    "target": "ES2020",
+    "module": "NodeNext",
+    "lib": ["ES2020"],
+    "outDir": "./lib"
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
