--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsc --project tsconfig.build.json && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete scripts devDependencies",
+    "build": "tsc --project tsconfig.build.json && node rewrite.mjs lib && tsc --project tsconfig.build.json --module CommonJS && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete type scripts devDependencies",
     "clean": "rimraf lib docs coverage",
     "test": "vitest run",
     "docs": "typedoc"
@@ -42,8 +42,6 @@
   "devDependencies": {
     "@types/glob-to-regexp": "^0.4.4",
     "@types/node": "^22.15.14",
-    "glob-to-regexp": "^0.4.1",
-    "kleur": "^4.1.5",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "tslib": "^2.8.1",
@@ -54,6 +52,8 @@
   "dependencies": {
     "argcat": "^1.0.2",
     "doubter": "^5.1.1",
-    "fast-glob": "^3.3.3"
+    "fast-glob": "^3.3.3",
+    "glob-to-regexp": "^0.4.1",
+    "kleur": "^4.1.5"
   }
 }
