--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    //    "noUnusedLocals": true,
+    //    "noUnusedParameters": true,
     "skipLibCheck": true,
     "target": "ES2020",
     "module": "NodeNext",
