--- a/package.json
+++ b/package.json
@@ -2,29 +2,27 @@
   "name": "toofast",
   "version": "2.0.0",
   "description": "The Node.js performance testing tool with unit-test-like API.",
-  "main": "./lib/index.js",
-  "module": "./lib/index.mjs",
-  "types": "./lib/index.d.ts",
+  "main": "./index.js",
+  "module": "./index.mjs",
+  "types": "./index.d.ts",
+  "type": "module",
   "bin": {
-    "toofast": "./lib/bin.js"
+    "toofast": "./toofast.js"
   },
   "exports": {
     ".": {
-      "types": "./lib/index.d.ts",
-      "import": "./lib/index.mjs",
-      "require": "./lib/index.js"
+      "types": "./index.d.ts",
+      "import": "./index.mjs",
+      "require": "./index.js"
     },
     "./package.json": "./package.json"
   },
   "sideEffects": false,
-  "files": [
-    "lib"
-  ],
   "scripts": {
-    "build": "rollup --config --configPlugin typescript",
-    "clean": "rimraf ./lib ./docs ./coverage",
-    "test": "jest",
-    "docs": "typedoc ./src/main/index.ts"
+    "build": "tsc --project tsconfig.build.json && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete scripts devDependencies",
+    "clean": "rimraf lib docs coverage",
+    "test": "vitest run",
+    "docs": "typedoc"
   },
   "repository": {
     "type": "git",
@@ -42,25 +40,20 @@
   },
   "homepage": "https://github.com/smikhalevski/toofast#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@types/glob": "^8.1.0",
-    "@types/glob-to-regexp": "^0.4.1",
-    "@types/jest": "^29.4.0",
-    "glob-to-regexp": "^0.4.1",
-    "jest": "^29.4.3",
-    "kleur": "^4.1.5",
-    "prettier": "^2.8.4",
-    "rimraf": "^4.1.3",
-    "rollup": "^3.18.0",
-    "rollup-plugin-dts": "^5.2.0",
-    "ts-jest": "^29.0.5",
-    "tslib": "^2.5.0",
-    "typedoc": "^0.23.26",
-    "typescript": "^4.9.5"
+    "@types/glob-to-regexp": "^0.4.4",
+    "@types/node": "^22.15.14",
+    "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
+    "tslib": "^2.8.1",
+    "typedoc": "^0.28.4",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "dependencies": {
-    "glob": "^9.1.2"
+    "argcat": "^1.0.2",
+    "doubter": "^5.1.1",
+    "fast-glob": "^3.3.3",
+    "glob-to-regexp": "^0.4.1",
+    "kleur": "^4.1.5"
   }
 }
