--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "exports": {
     ".": {
       "types": "./index.d.ts",
-      "import": "./index.mjs",
-      "require": "./index.js"
+      "default": "./index.js"
     },
     "./package.json": "./package.json"
   },
